fix texture preview width on small windows

--- a/src/css/_tabs.scss
+++ b/src/css/_tabs.scss
@@ -621,7 +621,7 @@
 			flex-wrap: nowrap;
 
 			canvas {
-				max-width: 512px;
+				max-width: min(80%, 512px);
 			}
 		}
 	}
